--- a/src/sass/base/mixins/_mixins.scss
+++ b/src/sass/base/mixins/_mixins.scss
@@ -70,13 +70,13 @@
 }
 
 //Border Button
-@mixin border--button($color) {
+@mixin border--button($border-color, $background-color-dark) {
   background-color: transparentize(white, 1);
-  border-color: $color;
-  color: $color;
-  .dashing-icon:before { color: $color; }
-  &:hover, &:focus {
-    background-color: darken($color, 10%);
+  border-color: $border-color;
+  color: $border-color;
+  .dashing-icon:before { color: $border-color; }
+  &:hover, &:focus, &:active {
+    background-color: $background-color-dark;
     border-color: transparentize(white, 1);
     color: $white;
     .dashing-icon:before {
@@ -84,15 +84,13 @@
       transition: all 50ms ease-in-out;
     }
   }
-  &:active { background-color: darken($color, 15%); }
 }
 
 //Transparent Button
 @mixin transparent--button($color) {
   background-color: transparentize(white, 1);
   color: $color;
-  &:hover, &:focus { background-color: rgba(85,85,85,.1) }
-  &:active { background-color: rgba(85,85,85,.2) }
+  &:hover, &:focus, &:active { background-color: var(--color-hover) }
   .dashing-icon:before { color: $color; }
 }
 
