--- a/src/sass/base/colors/_given-colors.scss
+++ b/src/sass/base/colors/_given-colors.scss
@@ -4,38 +4,38 @@
   $color-purple-light:                lighten($color-purple, 10%) !default;
   $color-purple-dark:                 darken($color-purple, 10%) !default;
 
-  $color-blue:                        #097CBF;
+  $color-blue:                        #097CBF !default;
   $color-blue-light:                  lighten($color-blue, 10%) !default;
   $color-blue-dark:                   darken($color-blue, 10%) !default;
 
-  $color-green:                       #00875D;
+  $color-green:                       #00875D !default;
   $color-green-light:                 lighten($color-green, 10%) !default;
   $color-green-dark:                  darken($color-green, 10%) !default;
 
-  $color-orange:                      #F8652A;
+  $color-orange:                      #F8652A !default;
   $color-orange-light:                lighten($color-orange, 10%) !default;
   $color-orange-dark:                 darken($color-orange, 10%) !default;
 
-  $color-red:                         #D1323F;
+  $color-red:                         #D1323F !default;
   $color-red-light:                   lighten($color-red, 10%) !default;
   $color-red-dark:                    darken($color-red, 10%) !default;
 
-  $color-black:                       #222228;
-  $color-gray-4:                      #6F6F75;
-  $color-gray-3-dark:                 #B4B4B8;
-  $color-gray-3:                      #E1E1E7;
-  $color-gray-2:                      #EEEEF4;
-  $color-gray-1:                      #F3F3F9;
-  $color-white:                       #FFFFFF;
+  $color-black:                       #222228 !default;
+  $color-gray-4:                      #6F6F75 !default;
+  $color-gray-3-dark:                 #B4B4B8 !default;
+  $color-gray-3:                      #E1E1E7 !default;
+  $color-gray-2:                      #EEEEF4 !default;
+  $color-gray-1:                      #F3F3F9 !default;
+  $color-white:                       #FFFFFF !default;
 
   /* Primary and Accent */
-  $color-primary:               $color-purple;
-  $color-primary-light:         $color-purple-light;
-  $color-primary-dark:          $color-purple-dark;
+  $color-primary:               $color-purple !default;
+  $color-primary-light:         $color-purple-light !default;
+  $color-primary-dark:          $color-purple-dark !default;
 
-  $color-accent:                $color-blue;
-  $color-accent-light:          $color-blue-light;
-  $color-accent-dark:           $color-blue-dark;
+  $color-accent:                $color-blue !default;
+  $color-accent-light:          $color-blue-light !default;
+  $color-accent-dark:           $color-blue-dark !default;
 
   /* Semantic */
   $color-success:               $color-green;
