--- a/src/sass/base/mixins/_mixins.scss
+++ b/src/sass/base/mixins/_mixins.scss
@@ -90,7 +90,7 @@
 @mixin transparent--button($color) {
   background-color: transparentize(white, 1);
   color: $color;
-  &:hover, &:focus, &:active { background-color: var(--color-hover) }
+  &:hover, &:focus, &:active { background-color: $color-hover }
   .dashing-icon:before { color: $color; }
 }
 
@@ -109,8 +109,8 @@
 
 //Action Tag
 @mixin tag--action($color) {
-  background-color: $gray-150;
-  border-color: $gray-150;
+  background-color: $color-gray-3;
+  border-color: $color-gray-3;
   color: $color;
   &:not(.tag--no-link):hover, &:not(.tag--no-link):focus {
     border-color: $color;
