--- a/src/sass/modules/footer/footer.scss
+++ b/src/sass/modules/footer/footer.scss
@@ -1,10 +1,8 @@
-$footer-color: $white !default; //Override this variable to change the color of your footer
-$footer-border-color: $gray-200 !default; //Override this variable to change the color of the top border of your footer
+$footer-color: $color-white !default; //Override this variable to change the color of your footer
 
 .app-footer {
   background-color: rgba($footer-color, .95);
-  border-top: 2px solid $footer-border-color;
-  box-shadow: 0 -2px 30px 0 rgba($gray-900c, .15);
+  box-shadow: 0 -2px 30px 0 rgba($color-shadow, .16);
   float: left;
   max-width: 100%;
   padding: 1rem;
